<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Gerenciador de Cursos"
        android:textSize="30dp"
        android:gravity="center"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/nomeCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_curso"
        android:inputType="text"
        android:autofillHints="none" />

    <EditText
        android:id="@+id/descricaoCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descri_o_do_curso"
        android:inputType="text"
        android:autofillHints="none" />

    <EditText
        android:id="@+id/precoCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Preço do curso"
        android:inputType="text"
        android:autofillHints="none" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/botao_adicionar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adicionar_curso"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/botao_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Voltar"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>
